--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
+
+security.oauth2.client.client-id=${APP_CLIENT_ID:movieflix}
+security.oauth2.client.client-secret=${APP_CLIENT_SECRET:movieflix1234}
+
+jwt.secret=${APP_JWT_SECRET:MyJwtSecret}
+jwt.duration=${APP_JWT_DURATION:86400}
