--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.0",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-select": "^5.0.1",
@@ -19,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "qs": "^6.10.2",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-router-dom": "^6.2.1",
